--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-ejs-layouts": "^2.5.0",
     "express-flash": "0.0.2",
     "express-session": "^1.17.1",
+    "method-override": "^3.0.0",
     "mongoose": "^5.9.25",
     "passport": "^0.4.1"
   },
